more cloud service apis
