# golem-common/src/api/environment.rs
@@ -13,13 +13,8 @@
 // limitations under the License.
 
 use crate::declare_structs;
-use crate::model::environment::EnvironmentRevision;
 
 declare_structs! {
-    pub struct UpdateEnvironmentRequest {
-        pub previous_revision: EnvironmentRevision,
-    }
-
     pub struct DeployEnvironmentRequest {
 
     }
